--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "gulp-uglify": "^1.5.4",
     "gulp-watch": "^4.3.5",
     "mjml": "^1.2.1",
-    "rimraf": "^2.4.3"
+    "rimraf": "^2.4.3",
+    "gulp-filter": "^5.1.0",
+    "main-bower-files": "^2.13.1"
   }
 }
