--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
   ],
   "dependencies": {
     "bootstrap": "v4.0.0-alpha.2",
-    "jquery": "~1.10.2",
+    "jquery": "^3.0.0",
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
     "tether": "~1.1.1",
