--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,8 @@
     "node_modules"
   ],
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.2",
-    "jquery": "^3.0.0",
+    "bootstrap": "^3.1.1",
+    "jquery": "^1.9.1",
     "angular": "^1.5.6",
     "angular-route": "^1.5.6",
     "tether": "~1.1.1",
