--- a/bower.json
+++ b/bower.json
@@ -50,7 +50,8 @@
     "angular-ui-router": "1.0.3",
     "angular-summernote": "0.8.1",
     "angular-ui-grid": "^4.4.11",
-    "js-xlsx": "^0.13.0"
+    "js-xlsx": "^0.13.0",
+    "ng-file-upload": "^12.2.13"
   },
   "resolutions": {
     "chartist": "^0.9.7",
